--- a/HOMEWORK/rest+bootstrap./rest-bootstrap-media.css
+++ b/HOMEWORK/rest+bootstrap./rest-bootstrap-media.css
@@ -23,7 +23,7 @@
         flex-direction: column;
         margin: 0;
         align-items: center;
-        margin-bottom: 200px;
+      padding-bottom: 200px;
     }
 
     .h1, .h2, .p {
