--- a/HOMEWORK/Kältemaschinen+Bootstrap/Frigel.media.css
+++ b/HOMEWORK/Kältemaschinen+Bootstrap/Frigel.media.css
@@ -13,7 +13,7 @@
         width: 390px;
     }
 
-    .LOGO > img {
+    .LOGO > img. {
         height: 30px;
         width: 100px;
     }
@@ -53,11 +53,11 @@
         padding: 0;
     }
 
-    .b-one > img, .b-four > img, .b-seven > img {
+    .b-one > img, .b-four > img, .b-seven > img. {
         width: 380px;
     }
 
-    .deff {
+    .deffer {
         width: 390px;
         height: 100px;
         display: flex;
